--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,19 @@
             <version>1.4.189</version>
         </dependency>
 
+        <!--For oracle-->
+        <!--<dependency>
+            <groupId>ojdbc</groupId>
+            <artifactId>ojdbc</artifactId>
+            <version>14</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
+
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
